テーブルのスタイルを調整 制御講習へ用語集とTipsを追加

--- a/assets/styles/page.css
+++ b/assets/styles/page.css
@@ -3,7 +3,7 @@
 main {
     background-color: var(--page-bg-color);
     color: var(--page-text-color);
-    padding: 1rem 5rem;
+    padding: 1rem 5rem 5rem;
 }
 
 /* vim: set et sts=4 sw=4 : */
