--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -10,12 +10,41 @@ a {
     }
 }
 
+code {
+    background-color: var(--code-bg-color);
+    border-radius: 0.25rem;
+    color: var(--code-text-color);
+    margin-inline: 0.25rem;
+    padding-inline: 0.25rem;
+}
+
+table {
+    border-collapse: collapse;
+}
+
+thead {
+    background-color: var(--table-head-bg-color);
+    color: var(--table-head-text-color);
+}
+
+tbody {
+    background-color: var(--table-body-bg-color);
+    color: var(--table-body-text-color);
+}
+
+td, th {
+    border: 2px solid #999;
+    padding: 0.5rem 1rem;
+}
+
 body {
     display: block flex;
     flex-direction: column;
     flex-wrap: nowrap;
     font-size: var(--text-size);
     min-height: 100svh;
+    min-width: 100%;
+    overflow-x: hidden;
     word-break: auto-phrase;
     @supports not (word-break: auto-phrase) {
         overflow-wrap: anywhere;
