制御班入門 準備編を追加 制御講習用語集を追記 リンクのスタイルを分かりやすいよう修正

--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -2,11 +2,11 @@
 
 a {
     color: inherit;
-    text-decoration: none;
+    text-decoration-style: dotted;
     transition: text-decoration ease 0.3s;
 
     &:is(:active, :focus, :hover) {
-        text-decoration: underline;
+        text-decoration-style: solid;
     }
 }
 
