--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -1,5 +1,13 @@
 @charset "UTF-8";
 
+.material-symbols-outlined {
+    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+}
+
+* {
+    max-width: 100%;
+}
+
 a {
     color: inherit;
     text-decoration-style: dotted;
@@ -14,8 +22,18 @@ code {
     background-color: var(--code-bg-color);
     border-radius: 0.25rem;
     color: var(--code-text-color);
+    font-family: var(--font-mono), monospace;
+    font-optical-sizing: auto;
+    font-style: normal;
+    font-weight: 400;
     margin-inline: 0.25rem;
     padding-inline: 0.25rem;
+}
+
+details {
+    background-color: var(--details-bg-color);
+    color: var(--details-text-color);
+    padding: 0.25rem 1rem;
 }
 
 table {
@@ -41,7 +59,11 @@ body {
     display: block flex;
     flex-direction: column;
     flex-wrap: nowrap;
+    font-family: var(--font-sans), sans-serif;
+    font-optical-sizing: auto;
     font-size: var(--text-size);
+    font-style: normal;
+    font-weight: 400;
     min-height: 100svh;
     min-width: 100%;
     overflow-x: hidden;
