--- a/assets/styles/page.css
+++ b/assets/styles/page.css
@@ -3,7 +3,27 @@
 main {
     background-color: var(--page-bg-color);
     color: var(--page-text-color);
-    padding: 1rem 5rem 5rem;
+    padding: var(--page-padding);
+}
+
+.page-date-container {
+    border: 1px solid var(--border-color);
+    border-radius: 0.5rem;
+    display: block flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 1.5rem;
+    padding: 0.25rem 0.5rem;
+    width: fit-content;
+}
+
+.page-created-date, .page-modified-date {
+    align-items: center;
+    display: block flex;
+    flex: 0 0 auto;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 0.25rem;
 }
 
 /* vim: set et sts=4 sw=4 : */
