feature: スタイルを調整。

--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -46,8 +46,15 @@
 
 /* fonts */
 :root {
-    --font-mono: "Noto Sans Mono", "Source Code Pro", ui-monospace, Menlo, Monaco, "Cascadia Mono", "Segoe UI Mono", "Roboto Mono", "Oxygen Mono", "Ubuntu Monospace", "Fira Mono", "Droid Sans Mono", "Courier New";
-    --font-sans: "Noto Sans JP", "Noto Sans CJK JP", "Helvetica Neue", Helvetica, Arial, "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Yu Gothic", Meiryo;
+    --font-mono:
+        "Noto Sans Mono CJK JP", "Noto Sans Mono", "Source Code Pro",
+        "Source Han Code JP", ui-monospace, monospace, "Noto Color Emoji",
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    --font-sans:
+        "Noto Sans JP", "Noto Sans CJK JP", "Helvetica Neue", helvetica, arial,
+        "Hiragino Sans", "Hiragino Kaku Gothic ProN", "Yu Gothic", meiryo,
+        ui-sans-serif, system-ui, sans-serif, "Noto Color Emoji",
+        "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
 
 /* paddings */
