--- a/assets/styles/base.css
+++ b/assets/styles/base.css
@@ -1,7 +1,11 @@
 @charset "UTF-8";
 
 .material-symbols-outlined {
-    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+    font-variation-settings:
+        "FILL" 0,
+        "wght" 400,
+        "GRAD" 0,
+        "opsz" 24;
 }
 
 * {
@@ -22,7 +26,7 @@ code {
     background-color: var(--code-bg-color);
     border-radius: 0.25rem;
     color: var(--code-text-color);
-    font-family: var(--font-mono), monospace;
+    font-family: var(--font-mono);
     font-optical-sizing: auto;
     font-style: normal;
     font-weight: 400;
@@ -50,16 +54,25 @@ tbody {
     color: var(--table-body-text-color);
 }
 
-td, th {
+td,
+th {
     border: 2px solid #999;
     padding: 0.5rem 1rem;
+}
+
+h3 {
+    border-bottom: 2px solid var(--page-text-color);
+    margin-left: 1rem;
+    padding-left: 0.5rem;
+    padding-right: 2rem;
+    width: max-content;
 }
 
 body {
     display: block flex;
     flex-direction: column;
     flex-wrap: nowrap;
-    font-family: var(--font-sans), sans-serif;
+    font-family: var(--font-sans);
     font-optical-sizing: auto;
     font-size: var(--text-size);
     font-style: normal;
@@ -74,7 +87,8 @@ body {
     }
 }
 
-footer, header {
+footer,
+header {
     flex: 0 1 auto;
 }
 
