--- a/assets/style.css
+++ b/assets/style.css
@@ -5,5 +5,6 @@
 @import "styles/header.css";
 @import "styles/footer.css";
 @import "styles/page.css";
+@import "styles/highlight.css";
 
 /* vim: set et sts=4 sw=4 : */
